--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -120,3 +120,28 @@ body {
     margin-right: 0;
   }
 }
+
+pre code {
+  background: black;
+  color: white;
+  display: block;
+  padding: 1em 1.5em;
+  line-height: 1.6;
+}
+
+/* pre {
+    background: #f4f4f4;
+    border: 1px solid #ddd;
+    border-left: 3px solid #f36d33;
+    color: #666;
+    page-break-inside: avoid;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 100%;
+    overflow: auto;
+    padding: 1em 1.5em;
+    display: block;
+    word-wrap: break-word;
+} */
